pages link and constructor started

--- a/home.html
+++ b/home.html
@@ -2,25 +2,27 @@
 <html lang=en>
   <head>
     <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="basic.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-<body>
-  <section id="name">
     <div id="header">
-      <h1>Nancy Perez</h1>
+      <h1><img src="images/oxnardName.jpg"></h1>
     </div>
-  </section>
-    <nav class="main-nav">
-      <span class = "icon-menu">
-      </span>
-        <ul>
-          <li><a href="home.html">About</a></li>
-          <li><a href="projects.html">Projects</li>
-          <li><a href="contactMe.html">Contact Me</li>
-        </ul>
-      </nav>
+  <nav class="main-nav">
+    <span class = "icon-menu">
+    </span>
+      <ul>
+        <li><a href="home.html">About</a></li>
+        <li><a href="projects.html">Projects</li>
+        <li><a href="contactMe.html">Contact Me</li>
+      </ul>
+    </nav>
+    <article>
+      <div id="intro">
+        <h3>Hi, I'm Nancy!</h3>
+      </div>
+    </article>
 
-</body>
+
 </html>
