--- a/projects.html
+++ b/projects.html
@@ -2,22 +2,25 @@
 <html lang=en>
   <head>
     <title>Projects</title>
+    <link rel="stylesheet" href="basic.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-
-<body>
   <section id="name">
-    <h1>Nancy Perez</h1>
+    <div id="header">
+      <h1>Nancy Perez</h1>
+    </div>
   </section>
-    <nav class="main-nav">
-      <span class = "icon-menu">
-      </span>
-        <ul>
-          <li><a href="home.html">About</a></li>
-          <li><a href="projects.html">Projects</li>
-          <li><a href="contactMe.html">Contact Me</li>
-        </ul>
-      </nav>
+  <nav class="main-nav">
+    <span class = "icon-menu">
+    </span>
+      <ul>
+        <li><a href="home.html">About</a></li>
+        <li><a href="projects.html">Projects</li>
+        <li><a href="contactMe.html">Contact Me</li>
+      </ul>
+    </nav>
+    <article>
+      <h3>Insert Projects Around Here Somewhere</h3>
+    </article>
 
-</body>
 </html>
