--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,10 @@
 <html lang=en>
   <head>
     <title>Projects</title>
-    <link rel="stylesheet" href="basic.css">
+    <link rel="stylesheet" href="basic.css" type="text/css">
+    <script type="text/javascript" href="script.js"></script>
+    <script type="text/javascript" href="finishedProjects.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <section id="name">
@@ -14,13 +17,15 @@
     <span class = "icon-menu">
     </span>
       <ul>
-        <li><a href="home.html">About</a></li>
+        <li><a href="index.html">About</a></li>
         <li><a href="projects.html">Projects</li>
         <li><a href="contactMe.html">Contact Me</li>
       </ul>
     </nav>
-    <article>
-      <h3>Insert Projects Around Here Somewhere</h3>
+    <article id="projects">
+      <h2></h2>
+      <h5></h5>
+      <img src="" id="projectImage">
+      <p></p>
     </article>
-
 </html>
