--- a/index.html
+++ b/index.html
@@ -15,16 +15,26 @@
         <span class ="icon-menu">About</span>
           <ul>
             <li><a href="index.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="contactMe.html">Contact Me</a></li>
           </ul>
       </nav>
       <main>
-        <article>
-          <div id="intro">
-            <h3>Hi, I'm Nancy!</h3>
-          </div>
-        </article>
+        <section id="hi">
+          <article>
+            <div id="intro">
+              <h3>Hi, I'm Nancy!</h3>
+            </div>
+          </article>
+        </section>
+      <section id="projects">
+          <article>
+            <h2>Project Name</h2>
+            <h5>Project Data</h5>
+            <img src="images/oxnardCity.jpg" id="projectImage">
+            <p>Short descrition of project.</p>
+          </article>
+          <section>
       </main>
       <footer>
         <a target ="_blank" href="https://github.com/pereznancy">GitHub</a><a target="_blank" href="https://www.linkedin.com/in/nancy-perez-719713132/">LinkedIn</a>
