--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
   </head>
   <body>
       <header id="page-header">Nancy Perez Portfolio Site</header>
-      <section id="image">
-        <img src="images/nameBW.jpg"></img>
-      </section>
+      <h1>Nancy Perez</h1>
       <nav class="main-nav">
         <span class ="icon-menu">About</span>
           <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="contactMe.html">Contact Me</a></li>
+            <li><a href="#contact-me">Contact Me</a></li>
           </ul>
       </nav>
       <main>
@@ -28,14 +26,20 @@
           </article>
         </section>
       <section id="projects">
-          <article>
+          <article class="template-article">
             <h2>Project Name</h2>
-            <h5>Project Data</h5>
-            <img src="images/oxnardCity.jpg" id="projectImage">
+            <h5>Project Date</h5>
+            <img id="image1" class="project-images" src="images/oxnardCity.jpg" ></img>
+            <img id="image2" class="project-images"></img>
+            <img id="image3" class="project-images"></img>
             <p>Short descrition of project.</p>
           </article>
-          <section>
       </main>
+      <section>
+        <section id="contact-me">
+          <h3>Possibly have a form to contact me or just list links</h3>
+        </section>
+
       <footer>
         <a target ="_blank" href="https://github.com/pereznancy">GitHub</a><a target="_blank" href="https://www.linkedin.com/in/nancy-perez-719713132/">LinkedIn</a>
       </footer>
