--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   </head>
   <body>
       <header id="page-header">Nancy Perez Portfolio Site</header>
-      <h1>Nancy Perez</h1>
+
+      <div id="intro">
+        <h1>Nancy Perez</h1>
+      </div>
       <nav class="main-nav">
         <span class ="icon-menu">About</span>
           <ul>
@@ -26,14 +29,14 @@
           </article>
         </section>
       <section id="projects">
-          <article class="template-article">
-            <h2>Project Name</h2>
-            <h5>Project Date</h5>
-            <img id="image1" class="project-images" src="images/oxnardCity.jpg" ></img>
-            <img id="image2" class="project-images"></img>
-            <img id="image3" class="project-images"></img>
-            <p>Short descrition of project.</p>
+        <script id="template-article" type="text/x-handlebars-template">
+          <article id="testProjects">
+            <a href="{{projectURL}}" target='_blank'>{{name}}</a>
+            <h5>{{date}}</h5>
+            <img id="image1" class="project-images" src="{{image1}}" ></img>
+            <p>{{description}}</p>
           </article>
+        </script>
       </main>
       <section>
         <section id="contact-me">
@@ -44,6 +47,7 @@
         <a target ="_blank" href="https://github.com/pereznancy">GitHub</a><a target="_blank" href="https://www.linkedin.com/in/nancy-perez-719713132/">LinkedIn</a>
       </footer>
        <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
        <script type="text/javascript" src="finishedProjects.js"></script>
        <script type="text/javascript" src="script.js"></script>
   </body>
