removed about next to menu icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Nancy Perez</h1>
       </div>
       <nav class="main-nav">
-        <span class ="icon-menu">About</span>
+        <span class ="icon-menu"></span>
           <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="#projects">Projects</a></li>
