--- a/index.html
+++ b/index.html
@@ -23,16 +23,14 @@
       </nav>
       <main>
         <section id="hi">
-          <article id="intro">
               <div class="slideshow">
                 <img class="mySlides" src="images/busMall.jpg">
                 <img class="mySlides" src="images/oxnardCity.jpg">
                 <img class="mySlides" src="images/oxnardFields.jpg">
                 <img class="mySlides" src="images/salmon.jpg">
-                <button class="slidshow-button" onclick="plusDivs(-1)">&#10094;</button>
-                <button class="slidshow-button" onclick="plusDivs(1)">&#10095;</button>
+                <button class="slidshow-button-left" onclick="plusDivs(-1)">&#10094;</button>
+                <button class="slidshow-button-right" onclick="plusDivs(1)">&#10095;</button>
               </div>
-          </article>
         </section>
 
       <section id="projects">
