--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
       <footer>
-        <a href="https://github.com/pereznancy" target="_blank" class="icon-github">GitHub</a>
+        <a href="https://github.com/pereznancy" target="_blank" class="icon">GitHub</a>
         <a href="https://www.linkedin.com/in/nancy-perez-719713132/" target="_blank" class="class="icon-linkedin2">LinkedIn</a>
       </footer>
        <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
