--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Nancy Perez</h1>
       </div>
       <nav class="main-nav">
-        <label class ="icon-menu" for="menu-toggle"></label>
+        <label class="icon-menu" for="menu-toggle"></label>
         <input id="menu-toggle" type="checkbox">
           <ul id="main-menu">
             <li><a href="#" data-tab="hi">About</a></li>
@@ -23,12 +23,12 @@
       </nav>
       <main>
         <section id="hi" class="tabs">
-              <div class="slideshow">
+              <div class="slideshow" >
+                <button class="slidshow-button-left" onclick="plusDivs(-1)">&#10094;</button>
                 <img class="mySlides" src="images/busMall.jpg">
                 <img class="mySlides" src="images/oxnardCity.jpg">
                 <img class="mySlides" src="images/oxnardFields.jpg">
                 <img class="mySlides" src="images/salmon.jpg">
-                <button class="slidshow-button-left" onclick="plusDivs(-1)">&#10094;</button>
                 <button class="slidshow-button-right" onclick="plusDivs(1)">&#10095;</button>
               </div>
         </section>
@@ -50,8 +50,8 @@
 
 
       <footer>
-        <a href="https://github.com/pereznancy" target="_blank" class="icon">GitHub</a>
-        <a href="https://www.linkedin.com/in/nancy-perez-719713132/" target="_blank" class="class="icon-linkedin2">LinkedIn</a>
+        <a href="https://github.com/pereznancy" target="_blank" class="icon">github</a>
+        <a href="https://www.linkedin.com/in/nancy-perez-719713132/" target="_blank" class="icon">linkedin</a>
       </footer>
        <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
