fixed UI experience..no dark background

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
       <header id="page-header">Nancy Perez Portfolio Site</header>
 
       <div id="nameHeader">
-        <h1>Nancy Perez</h1>
+        <h1 id="initials">NP</h1>
+        <h1 id="fullName">Nancy Perez</h1>
       </div>
       <nav class="main-nav">
         <label class="icon-menu" for="menu-toggle"></label>
@@ -24,12 +25,12 @@
       <main>
         <section id="hi" class="tabs">
               <div class="slideshow" >
-                <button class="slidshow-button-left" onclick="plusDivs(-1)">&#10094;</button>
+                <button class="slideshow-button-left" onclick="plusDivs(-1)">&#10094;</button>
                 <img class="mySlides" src="images/busMall.jpg">
                 <img class="mySlides" src="images/oxnardCity.jpg">
                 <img class="mySlides" src="images/oxnardFields.jpg">
                 <img class="mySlides" src="images/salmon.jpg">
-                <button class="slidshow-button-right" onclick="plusDivs(1)">&#10095;</button>
+                <button class="slideshow-button-right" onclick="plusDivs(1)">&#10095;</button>
               </div>
         </section>
 
