--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,29 @@
       </nav>
       <main>
         <section id="hi" class="tabs">
-              <div class="slideshow" >
-                <button class="slideshow-button-left" onclick="plusDivs(-1)">&#10094;</button>
-                <img class="mySlides" src="images/busMall.jpg">
-                <img class="mySlides" src="images/oxnardCity.jpg">
-                <img class="mySlides" src="images/oxnardFields.jpg">
-                <img class="mySlides" src="images/salmon.jpg">
-                <button class="slideshow-button-right" onclick="plusDivs(1)">&#10095;</button>
-              </div>
+          <div class="slideshow" >
+            <button class="slideshow-button-left" onclick="plusDivs(-1)">&#10094;</button>
+            <img class="mySlides" src="images/busMall.jpg">
+            <img class="mySlides" src="images/oxnardCity.jpg">
+            <img class="mySlides" src="images/oxnardFields.jpg">
+            <img class="mySlides" src="images/salmon.jpg">
+            <button class="slideshow-button-right" onclick="plusDivs(1)">&#10095;</button>
+          </div>
+          <ul></ul>
+          <script id="repo-template" type="text/x-handlebars-template">
+            <li>
+              <a href="{{html_url}}" target="_blank">
+                <h3>{{name}}</h3>
+              </a>
+              <p>Description: {{description}}</p>
+              <p>Language: {{language}}</p>
+              <p>Created: {{created_at}}</p>
+              <p>Last updated: {{updated_at}}</p>
+              {{#if watchers_count}}
+                <p>{{watchers_count}} watching this repo</p>
+              {{/if}}
+            </li>
+          </script>
         </section>
 
       <section id="projects" class="tabs">
@@ -57,11 +72,13 @@
        <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
        <script src="page.js"></script>
-       <script type="text/javascript" src="finishedProjects.js"></script>
+       <script src="githubToken.js"></script>
        <script type="text/javascript" src="script.js"></script>
+       <script src="repoView.js"></script>
        <script type="text/javascript" src="aboutController.js"></script>
        <script type="text/javascript" src="projectsController.js"></script>
        <script type="text/javascript" src="contactController.js"></script>
+       <script src="repo.js"></script>
        <script src="routes.js"></script>
        <script type="text/javascript">Project.fetchAll()</script>
 
