i dont think I made any changes

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <label class="icon-menu" for="menu-toggle"></label>
         <input id="menu-toggle" type="checkbox">
           <ul id="main-menu">
-            <li><a href="/" data-tab="hi">About</a></li>
+            <li><a href="/" data-tab="hi">Home</a></li>
             <li><a href="/projects" data-tab="projects">Projects</a></li>
             <li><a href="/contactme" data-tab="contact-me">Contact Me</a></li>
           </ul>
@@ -63,7 +63,6 @@
        <script type="text/javascript" src="projectsController.js"></script>
        <script type="text/javascript" src="contactController.js"></script>
        <script src="routes.js"></script>
-       <script type="text/javascript">Project.fetchAll()</script>
 
   </body>
 </html>
